// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-stripe-payment-request renders 1`] = `
<ce-stripe-payment-request>
  <!---->
  <div class="request">
    <div class="ce-payment-request-button" part="button"></div>
  </div>
</ce-stripe-payment-request>
`;

exports[`sc-stripe-payment-request renders 1`] = `
<sc-stripe-payment-request>
  <!---->
  <div class="request">
    <div class="sc-payment-request-button" part="button"></div>
  </div>
</sc-stripe-payment-request>
`;
